external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_match_unit.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04005]: expected a single type
  ┌─ tests/move_2024/matching/invalid_match_unit.move:6:16
  │
3 │     fun x() { }
  │         - Expected a single type, but found expression list type: '()'
  ·
6 │         match (x()) {
  │                ^^^ Invalid 'match' subject

error[E03019]: invalid pattern
  ┌─ tests/move_2024/matching/invalid_match_unit.move:7:13
  │
7 │             () => ()
  │             ^^ Tuple patterns are not allowed in match arms. Tuple destructuring is only valid in 'let' bindings

error[E04005]: expected a single type
   ┌─ tests/move_2024/matching/invalid_match_unit.move:12:16
   │
 3 │     fun x() { }
   │         - Expected a single type, but found expression list type: '()'
   ·
12 │         match (x()) {
   │                ^^^ Invalid 'match' subject
